@@ -7,6 +7,8 @@ Changes up to 0.99
     
     beta32
 
+    * non-textured label positioning
+
     * label_position x,y values <-1 or >1
 
     * multiple lights now work with multiple processors
